--- a/especificacao/mapa_de_requisitos.html
+++ b/especificacao/mapa_de_requisitos.html
@@ -59,7 +59,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
+                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/fga-gpp-mds/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
                           <i class="fa fa-github"></i>
                       </a>
                   </li>
@@ -385,10 +385,10 @@
                                       </table>
 
                                       <h2>Features</h2>
-                                        <p style="font-size: 18px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As <i>features</i> estão mapeadas no <i>github</i> com a <i>label</i>  <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues#boards?labels=1-produto,2-feature&repos=124531192,132006434,132006174,133160500,133529440,132774903,132005060,132006048">Feature</a>.</p>
+                                        <p style="font-size: 18px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As <i>features</i> estão mapeadas no <i>github</i> com a <i>label</i>  <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues#boards?labels=1-produto,2-feature&repos=124531192,132006434,132006174,133160500,133529440,132774903,132005060,132006048">Feature</a>.</p>
 
                                       <h2>Histórias de usuário</h2>
-                                        <p style="font-size: 18px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As histórias de usuário estão mapeadas no <i>github</i> com a <i>label</i> <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues#boards?labels=3-hist%C3%B3ria%20de%20usu%C3%A1rio&repos=124531192,132006434,132006174,133160500,133529440,132774903,132005060,132006048">Histórias de Usuário</a>.</p>
+                                        <p style="font-size: 18px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As histórias de usuário estão mapeadas no <i>github</i> com a <i>label</i> <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues#boards?labels=3-hist%C3%B3ria%20de%20usu%C3%A1rio&repos=124531192,132006434,132006174,133160500,133529440,132774903,132005060,132006048">Histórias de Usuário</a>.</p>
 
                                     </div>
 
@@ -408,7 +408,7 @@
           <nav class="pull-left">
               <ul>
                   <li>
-                      <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App">
+                      <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App">
                           Dulce Team
                       </a>
                   </li>
