--- a/especificacao/visao.html
+++ b/especificacao/visao.html
@@ -59,7 +59,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
+                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/fga-gpp-mds/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
                           <i class="fa fa-github"></i>
                       </a>
                   </li>
@@ -317,7 +317,7 @@
                                         <ul>
                                           <li style="font-size:18px"><b>Cliente:</b> Instuições de saúde.</li>
                                           <li style="font-size:18px"><b>Usuários:</b> Público interno das organizações hospitalares (funcionários e gestores).</li>
-                                          <li style="font-size:18px"><b><a  href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/blob/master/docs/equipe.md"> Equipe:<a></b> é composta por graduandos em Engenharia de Software pela Universidade de Brasília, no Campus Gama, discentes das disciplinas de Engenharia de Produto de Software e Métodos de Desenvolvimento de Software.</li>
+                                          <li style="font-size:18px"><b><a  href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/blob/master/docs/equipe.md"> Equipe:<a></b> é composta por graduandos em Engenharia de Software pela Universidade de Brasília, no Campus Gama, discentes das disciplinas de Engenharia de Produto de Software e Métodos de Desenvolvimento de Software.</li>
 
                                         <div name = "4.2" id = "4.2"></div>
 
@@ -446,7 +446,7 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App">
+                    <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App">
                         Dulce Team
                     </a>
                 </li>
