--- a/viabilidade-tecnica/sprint/sprint_0.html
+++ b/viabilidade-tecnica/sprint/sprint_0.html
@@ -79,7 +79,7 @@ tr:nth-child(even) {
                     </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
+                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/fga-gpp-mds/2018.1-Dulce_App" target="_blank" data-original-title="Acesse nosso repositório">
                           <i class="fa fa-github"></i>
                       </a>
                   </li>
@@ -118,14 +118,14 @@ tr:nth-child(even) {
                                 <br><br>
                                 <h2>Sprint Backlog</h2>
 
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/1">#1 - Adicionar Licença do repositório</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/4">#4 - Adicionar código de conduta</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/5">#5 - Adicionar guia de contribuição do projeto</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/6">#6 - Treinamento 1 - Scrum</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/8">#8 - Treinamento 2 - Git, Kanban</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/11">#11 - Adicionar documentação de sprints</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/14">#14 - Estudar as tecnologias do projeto</a><br>
-                                <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App/issues/24">#24 - Documentar Sprint 0</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/1">#1 - Adicionar Licença do repositório</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/4">#4 - Adicionar código de conduta</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/5">#5 - Adicionar guia de contribuição do projeto</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/6">#6 - Treinamento 1 - Scrum</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/8">#8 - Treinamento 2 - Git, Kanban</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/11">#11 - Adicionar documentação de sprints</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/14">#14 - Estudar as tecnologias do projeto</a><br>
+                                <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App/issues/24">#24 - Documentar Sprint 0</a><br>
                                 <br>
                                 <h2>Papéis</h2>
 
@@ -269,7 +269,7 @@ tr:nth-child(even) {
             <nav class="pull-left">
                 <ul>
                     <li>
-                        <a href="https://github.com/Dulce-Work-Schedule/2018.1-Dulce_App">
+                        <a href="https://github.com/fga-gpp-mds/2018.1-Dulce_App">
                             Dulce Team
                         </a>
                     </li>
